<resources>
    <string name="app_name">Exercise SQLite</string>
    <string name="judul">Daftar Kontak</string>
    <string name="judul2">Tambah Data</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="masukkan_no_telepon">Masukkan Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="btn_simpan">Simpan</string>
    <string name="profil">Profil</string>
    <string name="update">Update Data</string>
    <string name="batal">Batal</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="titik2">:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
