<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="@string/judul2"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewNama"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/nama"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/titik2"
                    android:textAlignment="textEnd"/>

                <EditText
                    android:id="@+id/editNama"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_nama"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewNoTlpn"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/nomor_telepon"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/titik2"
                    android:textAlignment="textEnd"/>

                <EditText
                    android:id="@+id/editNoTlpn"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_no_telepon"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/email"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/titik2"
                    android:textAlignment="textEnd"/>

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_email"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewAlamat"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/alamat"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/titik2"
                    android:textAlignment="textEnd"/>

                <EditText
                    android:id="@+id/editAlamat"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_alamat"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/btn_simpan"
            android:onClick="run"/>
    </LinearLayout>
</ScrollView>